--- a/usefulAppMcCain/Base.lproj/Main.storyboard
+++ b/usefulAppMcCain/Base.lproj/Main.storyboard
@@ -914,11 +914,11 @@
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hXd-Pa-A5C">
                                         <rect key="frame" x="0.0" y="0.0" width="393" height="532.66666666666663"/>
                                     </imageView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="iu9-Ah-Wst">
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="iu9-Ah-Wst">
                                         <rect key="frame" x="0.0" y="532.66666666666663" width="393" height="133.33333333333337"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ILY-Ng-ai9">
-                                                <rect key="frame" x="0.0" y="0.0" width="98.333333333333329" height="133.33333333333334"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="96.666666666666671" height="133.33333333333334"/>
                                                 <color key="backgroundColor" systemColor="systemBlueColor"/>
                                                 <color key="tintColor" systemColor="systemBlueColor"/>
                                                 <state key="normal" title="Button"/>
@@ -930,7 +930,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DvE-7a-UDe">
-                                                <rect key="frame" x="98.333333333333343" y="0.0" width="98.333333333333343" height="133.33333333333334"/>
+                                                <rect key="frame" x="98.666666666666686" y="0.0" width="97" height="133.33333333333334"/>
                                                 <color key="backgroundColor" systemColor="systemBlueColor"/>
                                                 <color key="tintColor" systemColor="systemBlueColor"/>
                                                 <state key="normal" title="Button"/>
@@ -942,7 +942,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DQA-tl-ZnB">
-                                                <rect key="frame" x="196.66666666666666" y="0.0" width="97.999999999999972" height="133.33333333333334"/>
+                                                <rect key="frame" x="197.66666666666666" y="0.0" width="96.666666666666657" height="133.33333333333334"/>
                                                 <color key="backgroundColor" systemColor="systemBlueColor"/>
                                                 <color key="tintColor" systemColor="systemBlueColor"/>
                                                 <state key="normal" title="Button"/>
@@ -954,7 +954,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="To6-wu-Ea8">
-                                                <rect key="frame" x="294.66666666666669" y="0.0" width="98.333333333333314" height="133.33333333333334"/>
+                                                <rect key="frame" x="296.33333333333331" y="0.0" width="96.666666666666686" height="133.33333333333334"/>
                                                 <color key="backgroundColor" systemColor="systemRedColor"/>
                                                 <color key="tintColor" systemColor="systemRedColor"/>
                                                 <state key="normal" title="Button"/>
